# catan-monorepo

./: .gitignore  Cargo.toml  README.md  program.md  run-hex-gambit.sh
crates/fastcore/: Cargo.toml  README.md  README_SMOKE.md
crates/fastcore/scripts/: smoke_loop.sh
crates/fastcore/src/: actions.rs  board.rs  board_config.rs  board_data.rs  delta.rs  engine.rs  lib.rs  rng.rs  rules.rs  state.rs  stats.rs  types.rs  value_player.rs
crates/fastcore/tests/: action_codec.rs  apply_undo.rs  golden_stats.rs  kernel_apply.rs  merge_order.rs  rng_determinism.rs  rules_legality.rs  value_player.rs
crates/fastcore/tests/data/: golden_stats.txt  golden_stats_legacy.txt
crates/initial-branch-analysis/: Cargo.toml
crates/initial-branch-analysis/src/: main.rs
data/: board_example.json  state_pre_last_settlement.json
docs/: README.md  current-state-baseline.md  current-state-drift-register.md  delta-reversible-decide-implementation-spec.md  hex-gambit-analysis-artifact-spec.md  holdout-modes-runbook.md  holdout-parameter-overhaul-plan-2026-03-03.md  holdout-replay-incident-postmortem-2026-03-03.md  initial-placement-product-prd.md  initial-placement-technical-spec.md  initial-placement-training-prd.md  opening-board-viewer-bdd-plan-2026-03-04.md  simulation-kernel-implementation-plan.md  single-cpu-autoresearch-campaign-runbook.md  single-cpu-autoresearch-gap-assessment-2026-03-14.md  single-cpu-autoresearch-plan-2026-03-14.md  single-cpu-autoresearch-role-prompts.md
hexgambit-qa/: PLAYWRIGHT_AUDIT.md  audit.mjs  package-lock.json  package.json
(+123 files in other folders)
