[package]
name = "fastcore"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic, allocation-efficient Catan simulation core."
publish = false

[dependencies]
rand = "0.8"
rand_core = "0.6"
rand_pcg = "0.3"
rayon = { version = "1.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
proptest = "1.4"

[features]
default = ["parallel"]
parallel = ["rayon"]
endgame_gap = []
legacy_robber = []
stackelberg_pruning = []
save_first_city_after_first_dev = []
