[package]
name = "initial-branch-analysis"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
fastcore = { path = "../fastcore", default-features = false, features = ["parallel"] }
rand = "0.8"
rand_core = "0.6"
rand_pcg = "0.3"
rayon = { version = "1.8", optional = true }
serde_json = "1.0"

[features]
default = ["parallel", "stackelberg_pruning"]
parallel = ["rayon", "fastcore/parallel"]
stackelberg_pruning = ["fastcore/stackelberg_pruning"]
endgame_gap = ["fastcore/endgame_gap"]
legacy_robber = ["fastcore/legacy_robber"]
save_first_city_after_first_dev = ["fastcore/save_first_city_after_first_dev"]
